# aifactory

./: .env.example  .gitignore  README.md  factory.config.json  package.json  pnpm-lock.yaml  rsync.sh  tsconfig.base.json  tsconfig.json
constraints/: RQ-0000-example.json
docs/: AI-FACTORY-CLI.md
infra/rag/: compose.yaml
requirements/: RQ-0000-example.md  RQ-0001-rag-ingest-file-progress.md  RQ-0002-rag-ingest-subdirectory.md  RQ-0003-resilient-gemini-embedding-ingest.md  RQ-0004-project-rag-grounding.md
services/rag/: README.md  pyproject.toml
services/rag/src/aifactory_rag/: __main__.py  api.py  cli.py  config.py  db.py  embeddings.py
services/rag/src/aifactory_rag/auth/: entra.py
services/rag/src/aifactory_rag/ingest/: chunker.py  parsers.py  pipeline.py  sources.py
services/rag/src/aifactory_rag/migrations/: 001_init.sql  002_flexible_embedding_vector.sql
services/rag/src/aifactory_rag/query/: responder.py  retriever.py
services/rag/tests/: test_resilient_embeddings.py  test_source_filter.py
templates/feature/: component.ts.hbs
templates/service/: service.ts.hbs
