[project]
name = "aifactory-rag"
version = "0.1.0"
description = "AI Factory enterprise RAG service"
requires-python = ">=3.11"
dependencies = [
  "anthropic>=0.40.0",
  "beautifulsoup4>=4.12.0",
  "fastapi>=0.115.0",
  "httpx>=0.27.0",
  "llama-index>=0.12.0",
  "llama-index-embeddings-openai>=0.3.0",
  "llama-index-llms-anthropic>=0.6.0",
  "llama-index-llms-openai>=0.3.0",
  "llama-index-vector-stores-postgres>=0.4.0",
  "openai>=1.50.0",
  "psycopg[binary]>=3.2.0",
  "pypdf>=5.1.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.4.0",
  "pyjwt[crypto]>=2.9.0",
  "python-docx>=1.1.2",
  "python-dotenv>=1.0.0",
  "python-pptx>=1.0.2",
  "uvicorn[standard]>=0.30.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "pytest-asyncio>=0.24.0"
]

[project.scripts]
aifactory-rag = "aifactory_rag.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/aifactory_rag"]
